[package]
name = "boring-sdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["cargo"] }
socket2 = {version = "*", features = ["all"]}
tokio = { version = "1.24.1", features = ["full"] }
tokio-tun = "0.7"
log = "0.4"
pretty_env_logger = "0.4"
pnet = "*"
bytes = "*"
flume = "*"
arc-swap = "1.6.0"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
simple-route ={ path = "../simple-route", version = "*"}
toml = "0.5.2"
num_cpus = "*"
futures = "0.3.28"
lru_time_cache = "0.11.11"
